--- a/Ejercicios Cap 1,2,3,4/Ejercicios Cap 1,2,3,4.csproj
+++ b/Ejercicios Cap 1,2,3,4/Ejercicios Cap 1,2,3,4.csproj
@@ -40,8 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cap 1\Cap1.cs" />
+    <Compile Include="Cap 2\Cap2.cs" />
+    <Compile Include="Cap 3\Cap3.cs" />
+    <Compile Include="Cap 4\Cap4.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
